tests/positive/pr118e2_nested_disjoint_fields.safe
-- Test: pr118e2_nested_disjoint_fields
-- Description: Nested record-field paths are admitted when they diverge on distinct sibling fields.
-- Expected: ACCEPT

package pr118e2_nested_disjoint_fields

   subtype count is integer (0 to 20)

   type cell is record
      value : count

   type branch is record
      left  : cell
      right : cell

   type holder is record
      inner : branch
      spare : count

   function bump_both (left : mut cell; right : mut cell)
      left.value = left.value + 1
      right.value = right.value + 1

   function run
      owner : holder = (inner = (left = (value = 1), right = (value = 2)), spare = 0)

      bump_both (owner.inner.left, owner.inner.right)
